# batalla_naval

./: .gitignore  CMakeLists.txt  main.cpp
libs/: barco.cpp  barco.h  jugador.cpp  jugador.h  jugador_cpu.cpp  jugador_cpu.h  jugador_humano.cpp  jugador_humano.h  tablero.cpp  tablero.h
